--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
   <link rel="stylesheet" href="./src/style/index.css">
 </head>
 <body>
-  Hello World
+  <div class="container">
+    <div class="header">
+      <div class="header-inside">
+        <h1>facebook</h1>
+      </div>
+    </div>
+    <div class="content"></div>
+    <div class="footer"></div>
+  </div>
   <script src="src/app.js"></script>
 </body>
 </html>
