--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   <div class="container">
     <div class="header">
       <div class="header-inside">
-        <h1>facebook</h1>
+        <h1 class="logo">facebook</h1>
+        <div class="register-button">
+          注册
+        </div>
       </div>
     </div>
     <div class="content"></div>
