--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <div class="register-button">
           注册
         </div>
+        <div class="join-facebook">
+          加入或登录 Facebook
+          <span class="header-join-facebook-triangle"></span>
+        </div>
       </div>
     </div>
     <div class="content"></div>
