feat[xj-1]: add words about facebook

--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
         </div>
       </div>
     </div>
-    <div class="content"></div>
+    <div class="content">
+      <div class="content-head">
+        创建主页
+      </div>
+      <div class="content-describe">
+        向 Facebook 全球社群推广你的业务、你自己或你的公益理念。选择一个主页类别即可开始操作。
+      </div>
+    </div>
     <div class="footer"></div>
   </div>
   <script src="src/app.js"></script>
