feat[xj-1]: add two roles of div

--- a/index.html
+++ b/index.html
@@ -29,6 +29,25 @@
       <div class="content-describe">
         向 Facebook 全球社群推广你的业务、你自己或你的公益理念。选择一个主页类别即可开始操作。
       </div>
+
+      <div class="content-role">
+        <img class = "content-role-img" src="//facebook.com/images/pages/create/biz_illustration.png" alt="">
+        <div class="content-role-title">商家或品牌</div>
+        <div class="content-role-desc">在 Facebook 上展示商品和服务，突显品牌，向更多顾客推广业务。</div>
+        <div class="content-role-button">
+          <button>开始</button>
+        </div>
+      </div>
+
+      <div class="content-role">
+        <img class = "content-role-img" src="//facebook.com/images/pages/create/community_illustration.png" alt="">
+        <div class="content-role-title">社群或公众人物</div>
+        <div class="content-role-desc">与你的社群、组织、团队、小组或俱乐部中的用户建立联系，分享内容。</div>
+        <div class="content-role-button">
+          <button>开始</button>
+        </div>
+      </div>
+
     </div>
     <div class="footer"></div>
   </div>
