fix[xj-1]: modify the triangle

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="header">
       <div class="header-inside">
         <h1 class="logo">facebook</h1>
-        <div class="register-button">
+        <span class="register-button">
           注册
-        </div>
+        </span>
         <div class="join-facebook">
           加入或登录 Facebook
           <span class="header-join-facebook-triangle"></span>
